GNOME Bugzilla – Bug 641793
Automatic proxy configuration should default to http://wpad/wpad.dat
Last modified: 2011-03-18 12:55:21 UTC
From https://bugzilla.redhat.com/show_bug.cgi?id=621012 ---8<--- On our world-wide WAN, we're big users of WPAD as a means to ensure our users use the closest proxy server to their physical location. "control-center" allows you to configure the use of WPAD via entering the appropriate URL - but it has no default. In reality, most real users would not know what the URL is (only the IT geeks do), so they don't know what to even type in. I think control-center should default to http://wpad/wpad.dat - the user could override it in the corner-case exceptions - but it would mean it would work out of the box. Version-Release number of selected component (if applicable): control-center-2.30.1-2.fc3 How reproducible: always - as long back as I can remember Steps to Reproduce: 1. System->Prefs->Network Proxy 2. 3. Actual results: no default Expected results: should default to http://wpad/wpad.dat Additional info: Obviously this is a feature request - hopefully this is the correct way to make them :-) ---8<---
If you choose "Automatic" and then don't fill in any configuration URL, it defaults to WPAD. However, nothing in the UI indicates this, and users could easily assume that some configuration URL is required. But in that case, would they be likely to accept something odd-looking like "http://wpad/wpad.dat"? But really, WPAD is a bad default anyway; if you enable it on an untrusted network, then anyone else on that network can tell your machine that it should proxy all of your web traffic through them. Exposing separate "Automatic (PAC)" and "Automatic (WPAD)" options would also obviously suck... The best bet might be to just add some explanatory text to the (otherwise nearly-empty) Automatic page. "To use a Proxy Auto-Configuration (PAC) file, enter its URL here. To try to find a PAC file automatically (using WPAD), leave the field blank. (You should only do this if you are on a trusted network.)"
(In reply to comment #1) > If you choose "Automatic" and then don't fill in any configuration URL, it > defaults to WPAD. However, nothing in the UI indicates this, and users could > easily assume that some configuration URL is required. But in that case, would > they be likely to accept something odd-looking like "http://wpad/wpad.dat"? I guess that's a good idea, but we can't just add string if the user *really* has a blank PAC and wants to use WPAD. > But really, WPAD is a bad default anyway; if you enable it on an untrusted > network, then anyone else on that network can tell your machine that it should > proxy all of your web traffic through them. > > Exposing separate "Automatic (PAC)" and "Automatic (WPAD)" options would also > obviously suck... Right. > The best bet might be to just add some explanatory text to the (otherwise > nearly-empty) Automatic page. "To use a Proxy Auto-Configuration (PAC) file, > enter its URL here. To try to find a PAC file automatically (using WPAD), leave > the field blank. (You should only do this if you are on a trusted network.)" We're very much in string freeze at the moment, that said, I'm sure I can get something through. I'll have a play now. Richard.
commit 88e192c03292d0d601ef1c71ee2d660e8223222d Author: Richard Hughes <richard@hughsie.com> Date: Fri Mar 18 12:16:26 2011 +0000 network: add a warning to the user when the PAC textbox is empty and we're going to use WPAD If you choose Automatic and then don't fill in any configuration URL, it defaults to WPAD. But really, WPAD is a bad default anyway; if you enable it on an untrusted network, then anyone else on that network can tell your machine that it should proxy all of your web traffic through them. The best bet might be to just add some explanatory text to the (otherwise nearly-empty) Automatic page. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=641793