network: add a warning to the user when the PAC textbox is empty and we're going to use WPAD

If you choose Automatic and then don't fill in any configuration URL, it
defaults to WPAD.

But really, WPAD is a bad default anyway; if you enable it on an untrusted
network, then anyone else on that network can tell your machine that it should
proxy all of your web traffic through them.

The best bet might be to just add some explanatory text to the (otherwise
nearly-empty) Automatic page.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=641793